logs/overlord.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/clearinghouse'...
Listing './lib/python3.5/site-packages/clearinghouse-0.1.egg-info'...
Listing './lib/python3.5/site-packages/overlord-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/portability'...
Compiling './lib/python3.5/site-packages/portability/repyhelper.py'...
***   File "./lib/python3.5/site-packages/portability/repyhelper.py", line 112
    raise ValueError, "The import cache dir '"+newimportcachedir+"' isn't in the Python path"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/portability-0.1.egg-info'...
Listing './lib/python3.5/site-packages/repy_v2'...
Compiling './lib/python3.5/site-packages/repy_v2/darwin_api.py'...
***   File "./lib/python3.5/site-packages/repy_v2/darwin_api.py", line 154
    raise Exception,"Errno:"+str(get_ctypes_errno())+", Error: "+get_ctypes_error_str()
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/emulcomm.py'...
***   File "./lib/python3.5/site-packages/repy_v2/emulcomm.py", line 213
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/emulmisc.py'...
***   File "./lib/python3.5/site-packages/repy_v2/emulmisc.py", line 66
    except NotImplementedError, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/freebsd_api.py'...
***   File "./lib/python3.5/site-packages/repy_v2/freebsd_api.py", line 96
    raise Exception,"Fatal error with sysctl. Errno:"+str(get_ctypes_errno())+", Error: "+get_ctypes_error_str()
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/harshexit.py'...
***   File "./lib/python3.5/site-packages/repy_v2/harshexit.py", line 70
    raise UnsupportedSystemException, "Unsupported system type: '"+osrealtype+"' (alias: "+ostype+")"
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/linux_api.py'...
***   File "./lib/python3.5/site-packages/repy_v2/linux_api.py", line 139
    raise Exception, "Queried Process is a zombie (dead)!"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/namespace.py'...
***   File "./lib/python3.5/site-packages/repy_v2/namespace.py", line 881
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/nanny.py'...
***   File "./lib/python3.5/site-packages/repy_v2/nanny.py", line 92
    raise InternalRepyError, "Resource '"+resource+"' limit set to 0, won't drain!"
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/nmstatusinterface.py'...
***   File "./lib/python3.5/site-packages/repy_v2/nmstatusinterface.py", line 65
    raise Exception, "Stop file already exists! File:"+stopfile
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/nonportable.py'...
***   File "./lib/python3.5/site-packages/repy_v2/nonportable.py", line 115
    raise UnsupportedSystemException, "Unsupported system type: '"+osrealtype+"' (alias: "+ostype+")"
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/persist.py'...
***   File "./lib/python3.5/site-packages/repy_v2/persist.py", line 148
    raise ValueError, "Filename '"+filename+"' missing."
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/repy.py'...
***   File "./lib/python3.5/site-packages/repy_v2/repy.py", line 148
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/safe.py'...
***   File "./lib/python3.5/site-packages/repy_v2/safe.py", line 331
    raise Exception, "Evaluation of code safety exceeded timeout threshold \
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/safe_check.py'...
***   File "./lib/python3.5/site-packages/repy_v2/safe_check.py", line 26
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/statusstorage.py'...
***   File "./lib/python3.5/site-packages/repy_v2/statusstorage.py", line 72
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/tracebackrepy.py'...
***   File "./lib/python3.5/site-packages/repy_v2/tracebackrepy.py", line 245
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/virtual_namespace.py'...
***   File "./lib/python3.5/site-packages/repy_v2/virtual_namespace.py", line 60
    raise RepyArgumentError, "Code must be a string!"
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/repy_v2/win_cpu_nanny.py'...
***   File "./lib/python3.5/site-packages/repy_v2/win_cpu_nanny.py", line 17
    print "Error, didn't get the right number of args:",sys.argv
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/repy_v2/windows_api.py'...
***   File "./lib/python3.5/site-packages/repy_v2/windows_api.py", line 55
    SYNCHRONIZE = 0x00100000L
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/repy_v2-0.1.egg-info'...
Listing './lib/python3.5/site-packages/seash'...
Compiling './lib/python3.5/site-packages/seash/command_callbacks.py'...
***   File "./lib/python3.5/site-packages/seash/command_callbacks.py", line 168
    print longname, seash_global_variables.vesselinfo[longname]['information']
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seash/seash.py'...
***   File "./lib/python3.5/site-packages/seash/seash.py", line 183
    except Exception, error:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seash/seash_dictionary.py'...
***   File "./lib/python3.5/site-packages/seash/seash_dictionary.py", line 110
    print current_help_text.strip()
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seash/seash_helper.py'...
***   File "./lib/python3.5/site-packages/seash/seash_helper.py", line 113
    print 'Time update failed, could not connect to any time servers...'
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seash/seash_modules.py'...
***   File "./lib/python3.5/site-packages/seash/seash_modules.py", line 97
    except seash_exceptions.ModuleImportError, e:
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/seash-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
